After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683499 - doesn't size correctly with hc theme
doesn't size correctly with hc theme
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Background
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 683502 689103 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-09-06 13:51 UTC by William Jon McCann
Modified: 2012-11-26 20:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (313.97 KB, image/png)
2012-09-06 13:51 UTC, William Jon McCann
Details

Description William Jon McCann 2012-09-06 13:51:06 UTC
Created attachment 223652 [details]
screenshot

We don't fit 3 images across in the high contrast theme.
Comment 1 Bastien Nocera 2012-09-06 13:52:53 UTC
Just HC, or Large text as well?
Comment 2 William Jon McCann 2012-09-06 14:03:38 UTC
HC. Scrollbar size probably.
Comment 3 Bastien Nocera 2012-09-06 14:33:31 UTC
*** Bug 683502 has been marked as a duplicate of this bug. ***
Comment 4 Bastien Nocera 2012-11-14 22:07:36 UTC
commit a4cf2839378c09e756c9c1ebe07adb036f7d3f26
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 14 23:06:07 2012 +0100

    background: Fix not having 3 columns in high contrast
    
    Increase the width slightly to 860 from 850.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=683499
Comment 5 Bastien Nocera 2012-11-26 20:04:10 UTC
*** Bug 689103 has been marked as a duplicate of this bug. ***