background: Fix not having 3 columns in high contrast

Increase the width slightly to 860 from 850.

https://bugzilla.gnome.org/show_bug.cgi?id=683499